k8s/gatekeeper/templates/k8sallowedrepos-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sallowedrepos
spec:
  crd:
    spec:
      names:
        kind: K8sAllowedRepos
      validation:
        openAPIV3Schema:
          properties:
            repos:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sallowedrepos

        allowed(repo) {
          some i
          startswith(repo, input.parameters.repos[i])
        }

        violation[{"msg": msg}] {
          input.review.kind.kind == "Pod"
          c := input.review.object.spec.containers[_]
          not allowed(c.image)
          msg := sprintf("container image '%v' is not from allowed repositories", [c.image])
        }
