k8s/gatekeeper/templates/k8sdisallowhostpath-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowhostpath
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowHostPath
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdisallowhostpath

        violation[{"msg": msg}] {
          input.review.kind.kind == "Pod"
          v := input.review.object.spec.volumes[_]
          v.hostPath
          msg := sprintf("hostPath volume not allowed (%v)", [v.name])
        }
