k8s/gatekeeper/templates/k8srequirerelimits-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequirerelimits
spec:
  crd:
    spec:
      names:
        kind: K8sRequireReLimits
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequirerelimits

        has(obj, field) {
          obj[field]
        }

        violation[{"msg": msg}] {
          input.review.kind.kind == "Pod"
          c := input.review.object.spec.containers[_]
          not has(c, "resources")
          msg := sprintf("resources {requests,limits} required for container %v", [c.name])
        }

        violation[{"msg": msg}] {
          input.review.kind.kind == "Pod"
          c := input.review.object.spec.containers[_]
          not has(c.resources, "requests")
          msg := sprintf("resources.requests required for container %v", [c.name])
        }

        violation[{"msg": msg}] {
          input.review.kind.kind == "Pod"
          c := input.review.object.spec.containers[_]
          not has(c.resources, "limits")
          msg := sprintf("resources.limits required for container %v", [c.name])
        }
